--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,84 @@ tzdata==2025.2
 urllib3==2.5.0
 Werkzeug==3.1.3
 xgboost==3.0.5
+annotated-types==0.7.0
+astropy==7.0.1
+astropy-iers-data==0.2025.10.27.0.39.10
+blinker==1.9.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
+filelock==3.20.0
+Flask==2.3.2
+fonttools==4.60.1
+fsspec==2025.9.0
+gitdb==4.0.12
+GitPython==3.1.45
+graphviz==0.20.3
+huggingface-hub==0.36.0
+idna==3.11
+iminuit==2.31.3
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.2
+kiwisolver==1.4.9
+light-curve==0.10.4
+llvmlite==0.45.1
+MarkupSafe==3.0.3
+matplotlib==3.10.1
+mpmath==1.3.0
+narwhals==2.9.0
+networkx==3.4.2
+numba==0.62.1
+numpy==2.2.4
+oracle @ git+https://github.com/dev-ved30/Oracle.git@407623446f0ef4c8e2571b0435feb65a888bd222
+packaging==25.0
+pandas==2.2.3
+pillow==12.0.0
+platformdirs==4.5.0
+plotly==6.3.0
+polars==0.20.31
+pooch==1.8.2
+progressbar2==4.5.0
+protobuf==6.33.0
+psutil==7.1.2
+pydantic==2.12.3
+pydantic_core==2.41.4
+pyerfa==2.0.1.5
+pynndescent==0.5.13
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+python-utils==3.9.1
+pytz==2025.2
+PyYAML==6.0.3
+regex==2025.10.23
+requests==2.32.5
+resspect==0.2
+safetensors==0.6.2
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+sentry-sdk==2.42.1
+setproctitle==1.3.7
+setuptools==80.9.0
+six==1.17.0
+smmap==5.0.2
+sympy==1.13.1
+threadpoolctl==3.6.0
+tokenizers==0.21.4
+torch==2.6.0
+torchvision==0.21.0
+tqdm==4.67.1
+transformers==4.51.3
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+umap-learn==0.5.8
+urllib3==2.5.0
+wandb==0.20.1
+Werkzeug==3.1.3
+wheel==0.45.1
+xgboost==3.1.1
