--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 annotated-types==0.7.0
 astropy==7.0.1
 astropy-iers-data==0.2025.10.27.0.39.10
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1763409923949/work
 blinker==1.9.0
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
 colorama==0.4.6
+comm @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_comm_1753453984/work
 contourpy==1.3.3
 cycler==0.12.1
+debugpy @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_debugpy_1758162043/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1756729339227/work
 filelock==3.20.0
 Flask==2.3.2
 fonttools==4.60.1
@@ -15,42 +20,73 @@ fsspec==2025.9.0
 gitdb==4.0.12
 GitPython==3.1.45
 graphviz==0.20.3
+hf-xet==1.2.0
 huggingface-hub==0.36.0
 idna==3.11
 iminuit==2.31.3
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_importlib-metadata_1747934053/work
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ipykernel_1761567932/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ipython_1762350942/work
+ipython_pygments_lexers @ file:///home/conda/feedstock_root/build_artifacts/ipython_pygments_lexers_1737123620466/work
 itsdangerous==2.2.0
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
 Jinja2==3.1.6
 joblib==1.5.2
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_jupyter_core_1760643864/work
 kiwisolver==1.4.9
 light-curve==0.10.4
 llvmlite==0.45.1
 MarkupSafe==3.0.3
 matplotlib==3.10.1
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1761214490209/work
 mpmath==1.3.0
 narwhals==2.9.0
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
 networkx==3.4.2
 numba==0.62.1
 numpy==2.2.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 oracle @ git+https://github.com/dev-ved30/Oracle.git@407623446f0ef4c8e2571b0435feb65a888bd222
-packaging==25.0
+packaging @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_packaging_1745345660/work
 pandas==2.2.3
+parso @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_parso_1755974222/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
 pillow==12.0.0
-platformdirs==4.5.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1759953252/work
 plotly==6.3.0
 polars==0.20.31
 pooch==1.8.2
 progressbar2==4.5.0
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1756321756983/work
 protobuf==6.33.0
 psutil==7.1.2
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+pyarrow==22.0.0
 pydantic==2.12.3
 pydantic_core==2.41.4
 pyerfa==2.0.1.5
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1750615794071/work
 pynndescent==0.5.13
 pyparsing==3.2.5
-python-dateutil==2.9.0.post0
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_python-dateutil_1751104122/work
 python-utils==3.9.1
 pytz==2025.2
 PyYAML==6.0.3
+pyzmq @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pyzmq_1757387023/work
 regex==2025.10.23
 requests==2.32.5
 resspect==0.2
@@ -61,21 +97,27 @@ seaborn==0.13.2
 sentry-sdk==2.42.1
 setproctitle==1.3.7
 setuptools==80.9.0
-six==1.17.0
+six @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_six_1753199211/work
 smmap==5.0.2
+stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
 sympy==1.13.1
 threadpoolctl==3.6.0
 tokenizers==0.21.4
 torch==2.6.0
 torchvision==0.21.0
+tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1762506760242/work
 tqdm==4.67.1
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
 transformers==4.51.3
+triton==3.2.0
 typing-inspection==0.4.2
-typing_extensions==4.15.0
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_typing_extensions_1756220668/work
 tzdata==2025.2
 umap-learn==0.5.8
 urllib3==2.5.0
 wandb==0.20.1
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1758622279606/work
 Werkzeug==3.1.3
 wheel==0.45.1
 xgboost==3.1.1
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1749421620841/work
